# tp-lab-8

./: .travis.yml  CMakeLists.txt  Makefile  README.md  dataset.txt  in.txt  input.txt  input2.txt  input_text.txt  main.cpp  out.txt  output.txt  output2.txt  output_text.txt
data/: input.txt  input_text.txt  output.txt  output_text.txt
file/: output.txt
include/: Common.h  Generator.h  Text.h  TextGenerator.h  config.h  funcs.h  generator.h  main.cpp  main.h  markovTextGen.h  task1.h
res/: output.txt
src/: Cvetaeva_Input.txt  Cvetaeva_Out.txt  Generation.cpp  Generator.cpp  Input.txt  InputText.txt  Main.cpp  Output.txt  Source.cpp  Text.cpp  TextGenerator.cpp  deleted.txt  funcs.cpp  generator.cpp  in.txt  input.txt  laba 8.cpp  laba8.cpp  main.cpp  markov.cpp  markovTextGen.cpp  out.txt  output-2.txt  output.txt  res.txt  result.txt  shinel.txt  skazka.txt  table.txt  task1.cpp  text1.txt
test/: input.txt  output.txt
